--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,118 @@
-.editorconfig
-.htaccess
-.idea
+# editors
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+*~
+
+# configs
+# scripts/flow/*/.flowconfig
+# .editorconfig
+# .prettierrc
+# .eslintrc
+
+# env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# docker
+/data/docker/ssh
+/docker-compose.override.yml
+
+# dependencies
+node_modules/
+.npm/
+.pnp/
+.pnp.js
+
+# testing
+coverage/
+template/src/__tests__/__snapshots__/
+test/the-files-to-test.generated.js
+fixtures/dom/public/react-dom.js
+fixtures/dom/public/react.js
+_SpecRunner.html
+__benchmarks__
+cypress/integration/examples
+cypress/screenshots
+cypress/videos
+
+# production
+build/
+_site/
+
+# react app
+my-app*
+
+# react devtools
+packages/react-devtools-core/dist
+packages/react-devtools-extensions/chrome/build
+packages/react-devtools-extensions/chrome/*.crx
+packages/react-devtools-extensions/chrome/*.pem
+packages/react-devtools-extensions/firefox/build
+packages/react-devtools-extensions/firefox/*.xpi
+packages/react-devtools-extensions/firefox/*.pem
+packages/react-devtools-extensions/shared/build
+packages/react-devtools-inline/dist
+packages/react-devtools-shell/dist
+
+# logs
+.changelog/
+.npm-debug.log
+lerna-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log*
+
+# file extensions
+*.tgz
+*.pyc
+*.iml
+*.swp
+*.swo
+
+# compiled source
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# packaged files
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# misc
+remote-repo/
+chrome-user-data
+
+# databases
+*.sql
+*.sqlite
+
+# OS generated files
+.Spotlight-V100
+ehthumbs.db
+Thumbs.db
+.DS_Store?
 .DS_Store
+.Trashes
+._*
+
+# web
+.htaccess
+
+# cache
+.cache
+.eslintcache
+.module-cache
